--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -17,3 +17,11 @@ Installer:
 ----------
 o Linux installer
 o Mac OS X installer
+
+Filter:
+-------
+o Write a pcl renderer
+o Make debug options available via cups filter options
+o Write a svg frontend
+o Writer raster test framework
+
