--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -24,4 +24,6 @@ o Write a pcl renderer
 o Make debug options available via cups filter options
 o Write a svg frontend
 o Writer raster test framework
+o use stdint everywhere
+
 
