--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -25,5 +25,5 @@ o Make debug options available via cups filter options
 o Write a svg frontend
 o Writer raster test framework
 o use stdint everywhere
-
+o find out how to control the auto focus touch off point precisely
 
