--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -24,6 +24,6 @@ o Write a pcl renderer
 o Make debug options available via cups filter options
 o Write a svg frontend
 o Writer raster test framework
-o use stdint everywhere
-o find out how to control the auto focus touch off point precisely
-
+o Use stdint everywhere
+o Find out how to control the auto focus touch off point precisely
+o Write a simple logger implementation
