Stuff was fixed. Yay

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -6,12 +6,6 @@ o Generate EpilogLegend36EXT.ppd with ppdc
 Postscript:
 -----------
 
-o Create a few standard test documents in the typical applications
-  (Inkscape, QCad, Corel Draw)
-o Go through each of these and figure out exactly how it goes wrong
-  when extracting data from it
-o Quick&Dirty fix: Hardcode an app-detector and write code to work
-  around the errors, just to buy us some time.
 
 Installer:
 ----------
@@ -27,3 +21,14 @@ o Writer raster test framework
 o Use stdint everywhere
 o Find out how to control the auto focus touch off point precisely
 o Write a simple logger implementation
+
+Testing:
+--------
+
+o Test the bounding box of HP-GL contents of RTL files.
+  (to detect issues with coordinate translations)
+
+Goodies:
+--------
+
+o Estimate cutting time
