Added note about color-coding of test results

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -20,6 +20,9 @@ o Find out how to control the auto focus touch off point precisely
 
 Testing:
 --------
+o Rewrite regression compare to be able to detect how much polylines, length, move etc.
+  changed. This should enable us to color-code the output correctly.
+  Probably need to rewrite it in python or smth.
 o rtlinfo: Summarize laser parameters
 o Test which laser parameters affect actual coordinates in the RTL output
 
